<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:onClick="goToSecondActivity"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_marginTop="32dp" />

</RelativeLayout>
